@@ -63,6 +63,7 @@
 #include "dvb/dr_5a.h"
 #include "dvb/dr_62.h"
 #include "dvb/dr_66.h"
+#include "dvb/dr_67.h"
 #include "dvb/dr_69.h"
 #include "dvb/dr_73.h"
 #include "dvb/dr_76.h"
